<resources>
    <string name="app_name">Stockbit</string>
    <!--login-->
    <string name="login_btn_facebook">Masuk dengan Facebook</string>
    <string name="login_btn_google">Masuk dengan Google</string>
    <string name="atau_txt">Atau</string>
    <string name="login_username_email_hint">Username or Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password_text">Lupa Password</string>
    <string name="login_help_text">Belum punya akun?</string>
    <string name="login_help_button_text">Daftar sekarang</string>
    <string name="login_button_text">Login</string>
    <string name="login_username_password_error">Username atau password salah</string>
    <string name="login_username_password_empty_error">The user field is required</string>
    <string name="login_fingerprint_button_text">login with fingerprint</string>

    <!--watchlist-->
    <string name="all_watchlist_text">All Watchlist</string>
</resources>